[build-system]
    requires = [
        "setuptools>=45",
        "wheel"
    ]
    build-backend = "setuptools.build_meta"

[project]
    name = "testplan"
    dynamic = ["version"]
    description = "Testplan testing framework"
    readme = "README.rst"
    license = {file="LICENSE.md"}
    authors = [
        { name = "Morgan Stanley", email = "eti-testplan@morganstanley.com" }
    ]
    keywords = ["testplan", "test", "unittest", "integrationtest", ]
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Software Development :: Testing",
        "Topic :: Software Development :: Testing :: Unit"        
        ]
    dependencies = [
        "setuptools",
        "pytest",
        "pytest-mock",
        "psutil",
        "schema",
        "tzlocal",
        "lxml",
        "reportlab",
        "marshmallow",
        "termcolor",
        "colorama",
        "pyzmq",
        "terminaltables",
        "requests>=2.4.3",
        "Flask>2.0.0,<2.3.0; python_version=='3.7'",
        "Flask>2.0.0; python_version>='3.8'",
        "Werkzeug>2.0.0,<2.3.0; python_version=='3.7'",
        "Werkzeug>2.0.0; python_version>='3.8'",
        "flask_restx<1.2.0; python_version=='3.7'",
        "flask_restx; python_version>='3.8'",
        "cheroot",
        "boltons",
        "validators<=0.20.0",
        "Pillow",
        "plotly",
        "pandas", # required by plotly.express
        "rpyc",
        "matplotlib",
        "coverage",
        "typing_extensions",
        "dill",
        "gherkin-official==4.1.3",
        "parse",
        "orjson; python_version>='3.8'",
        "flask-orjson; python_version>='3.8'",
        "exceptiongroup"
    ]
    requires-python = ">=3.7"

[project.urls]
    homepage = "https://github.com/morganstanley/testplan"
    documentation = "https://testplan.readthedocs.io"

[project.scripts]
    tpsreport = "testplan.cli.tpsreport:cli"

[tool.setuptools]
    include-package-data = false

[tool.setuptools.dynamic]
    version = {attr = "testplan.version.__build_version__"}

[tool.setuptools.packages.find]
    include = ["testplan", "testplan.*"]
    namespaces = false

[tool.setuptools.package-data]
    "testplan.web_ui" = ["testing/build/**/*"]
[tool.setuptools.exclude-package-data]
    "testplan.web_ui" = ["testing/build/**/*.map"]

[tool.black]
    line-length = 79
    extend-exclude = "testplan/vendor"

[tool.bumpver]
    current_version = "25.1.0"
    version_pattern = "YY.MM.INC0"
    commit_message = "bump version {old_version} -> {new_version}"
    commit = true
    tag = true
    push = true

[tool.bumpver.file_patterns]
    "pyproject.toml" = [
        'current_version = "{version}"',
    ]
    "testplan/version.py" = [
        '__version__ = "{version}"',
    ]

[tool.releaseherald]
    news_fragments_directory = 'doc/newsfragments'
    unreleased = true
    news_file = 'doc/news_template.rst'
    template = 'doc/news_version_template.rst'
    latest = false
    update = true

[tool.releaseherald.filename_metadata_extractor]
    type="re"
    pattern='''^(((?P<id>\d+)_?)?((?P<type>changed|new|deprecated|removed))?\.)?.*$'''

[tool.pytest.ini_options]
    filterwarnings = [
        "ignore::pytest.PytestWarning",
        "ignore:.*flask_restx.*:DeprecationWarning",
        # jsonschema warning from flask_restx
        "ignore:.*jsonschema.*:DeprecationWarning",
        "ignore:.*load_module.*:DeprecationWarning",
        "ignore:.*LogMatcher.*:UserWarning",
        # under most cases, included files are not hit
        "ignore:No data was collected:coverage.exceptions.CoverageWarning",
    ]
    norecursedirs = "tests/helpers"
