[metadata]
name = releaseherald
version = 0.0.1
description = Git label based release note generator

[options]
packages = find:
python_requires = >=3.7
install_requires =
    boltons
    click
    GitPython
    Jinja2
    toml
    pydantic

[options.package_data]
releaseherald.templates = *.rst

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    releaseherald = releaseherald.main:cli

