[metadata]
name = releaseherald-demo-plugin
version = 0.0.1
description = demo-plugin

[options]
packages = find:
python_requires = >=3.7
install_requires =
    icecream

[options.packages.find]
where = .

; each plugins should be listed as an entry point under
; the group "releaseherald_plugin" the name of the plugin
; is the name of the entry point, in this case "demo"

[options.entry_points]
releaseherald_plugin =
    demo = releaseherald_demo_plugin:plugin

